fixed nav link font size on mobile

--- a/style.css
+++ b/style.css
@@ -167,9 +167,10 @@ body {
   border-radius: 50px;
   border: 2px solid white;
   padding: 20px;
-    margin: 10px;
+  margin: 10px;
   width: 30%;
   text-align: center;
+  font-size: 250%;
 }
       
 #homeH2{
